<resources>
    <string name="app_name">Science Fest</string>
    <string name="title_activity_maps">Map</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search by Name</string>
    <string name="search_title">search</string>
    <string name="nav_list">Evénements</string>
    <string name="nav_journey">Parcours</string>
    <string name="nav_map">Carte du festival</string>
    <string name="nav_settings">Paramètres</string>
    <string name="sign_in_page_title">Sign in</string>
    <string name="sign_up_page_title">Sign up</string>
    <string name="sign_up_header">Join our community</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="sign_in_header">Log in to your account</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_login">Sign in</string>
    <string name="private_journeys_pager_title">My Journeys</string>
    <string name="shared_journeys_pager_title">Public Journeys</string>
    <string name="filter_title">filter</string>
    <string name="dialog_filter_title">Search filter</string>
    <string name="dialog_ok">Apply</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_journey_list_title">Add event to...</string>
    <string name="dialog_filter_title_01">Search in...</string>
    <string name="dialog_filter_search_in_name">Name</string>
    <string name="dialog_filter_search_in_place">Place</string>
    <string name="dialog_filter_search_in_theme">Themes</string>
    <string name="dialog_filter_search_in_description">Description</string>
    <string name="dialog_filter_search_in_keywords">Keywords</string>
    <string name="dialog_filter_title_02">Rating</string>
    <string name="dialog_filter_title_03">Theme</string>
    <string name="dialog_filter_title_04">Type</string>
    <string name="dialog_filter_title_05">Place</string>
    <string name="dialog_filter_title_06">Date</string>
    <string name="btn_logout">Log out</string>
    <string name="login_required">You are not logged in</string>
    <string name="journey_login_required">Connectez-vous pour voir vos parcours personalisés.</string>


    <string-array name="dialog_filter_rating_spinner">
        <item>All</item>
        <item>4.0 &amp; up</item>
        <item>3.0 &amp; up</item>
        <item>2.0 &amp; up</item>
        <item>1.0 &amp; up</item>
    </string-array>

</resources>
