<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@android:drawable/btn_star"
            android:title="@string/nav_list" />
        <item
            android:id="@+id/nav_journey"
            android:icon="@android:drawable/btn_star"
            android:title="@string/nav_journey" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/btn_star"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/btn_star"
            android:title="@string/nav_settings" />
    </group>
</menu>